# v8

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: assign.yml  check.yml  deploy.yml  deploy_beta.yml
src/: main.rs
src/api/: datatypes.rs  guild.rs  mod.rs  user.rs
src/commands/misc/: about.rs  leaderboard.rs  level.rs  mod.rs  rank.rs
src/events/: handler.rs
src/utils/: api.rs  imggen.rs  math.rs  mod.rs
vmng/: Cargo.toml
vmng/src/: main.rs
xp-bot/: Cargo.toml  Dockerfile  README.md
xp-bot/src/: main.rs
xp-bot/src/commands/: README.md  mod.rs
xp-bot/src/commands/admin/: add.rs  mod.rs  remove.rs  reset.rs  set.rs  setlevel.rs  setstreak.rs
xp-bot/src/commands/games/: daily.rs  fish.rs  loot.rs  mod.rs  party.rs  roll.rs  trivia.rs
xp-bot/src/commands/misc/: about.rs  distance.rs  incognito.rs  leaderboard.rs  level.rs  mod.rs  rank.rs  settings.rs  voicetime.rs
xp-bot/src/events/: handler.rs
xp-bot/src/utils/: colors.rs  ilum.rs  imggen.rs  math.rs  mod.rs  opentdb.rs  topgg.rs  utils.rs
xp-db-connector/: Cargo.toml
xp-db-connector/src/: guild.rs  guild_member.rs  guild_premium.rs  lib.rs  user.rs  user_background.rs
