[package]
name = "xp-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xp-db-connector = { path = "../xp-db-connector" }

dotenv = "0.15.0"
env_logger = "0.10.0"
image = "0.24.6"
libmath = "0.2.1"
log = "0.4.19"
reqwest = "0.11.18"
round = "0.1.2"
serde = "1.0.181"
serenity = { version = "0.11.6", features = [
    "builder",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "cache",
], default-features = false }
tokio = { version = "1", features = ["full"] }
