[package]
name = "xp-db-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["rustls", "rustls-tls", "serde_json", "tokio-rustls", "async-compression", "brotli", "deflate", "gzip"] }
serde = { version = "1.0.180", features = ["serde_derive"] }
serde_json = "1.0.104"
